incorporate feedback, move jackson code into a separate module